cabal-version:      2.4
name:               IsStrongPassword
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: IsStrongPassword

license:            Unlicense
author:             Daniel del Castillo
maintainer:         delcastillodelarosadaniel@gmail.com

library 
    exposed-modules:  
      IsStrongPassword
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   src
    default-language: Haskell2010

Test-Suite test
    type:               exitcode-stdio-1.0
    main-is:            IsStrongPasswordTest.hs
    hs-source-dirs:     test, src
    other-modules:      IsStrongPassword
    build-depends:      base ^>=4.14.3.0,
                        base >=4.7 && <5,
                        hspec
    default-language:   Haskell2010